talk to business div spacing and book a call button text issue resolved

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1343,6 +1343,28 @@ html.lenis {
     font-size: 12px;
   }
 }
+@media screen and (max-width: 400px) {
+  .landing_page_header_btn {
+    font-size: 10px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .landing_page_header_btn {
+    font-size: 5px;
+    padding: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+  .landing_page_header_btn .txt {
+    background-color: var(--orange);
+    border-radius: 14px;
+    padding: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+    transition: 0.4s ease;
+    border: 1px solid var(--orange);
+  }
+}
 @media screen and (max-width: 1200px) {
   .rv-1-def-btn {
     font-size: 16px;
